# fishing-crawler

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-to-ec2.yml
crawler/: __init__.py  classifiers.py  cli.py  env.py  naver_cafe.py  notifications.py  places.json  places.py  storage.py
infra/opensearch/: articles-index-v2.json  articles-index-v3.json  articles-index.json  synonyms.txt
infra/postgres/init/: 001_init.sql
scripts/: run_incremental_all.sh
